[gd_scene load_steps=12 format=3 uid="uid://bd0q2hqnn14il"]

[ext_resource type="Script" uid="uid://ftf1khhtnscd" path="res://Stages/LivingRoom/living_room.gd" id="1_s3tay"]
[ext_resource type="Texture2D" uid="uid://d010jumv4cp7s" path="res://Stages/LivingRoom/LivingRoom.png" id="2_iy0a6"]
[ext_resource type="PackedScene" uid="uid://5qmhw8feh0bi" path="res://Characters/PersonTD/PersonTD.tscn" id="3_b2dfi"]
[ext_resource type="PackedScene" uid="uid://dkfdxnxpiuya6" path="res://Inventario/Cartera.tscn" id="4_bpb7m"]
[ext_resource type="StyleBox" uid="uid://3th3b5nn5d85" path="res://Shaders/btn-inventary-hover.tres" id="4_i7qyh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7sa1j"]
size = Vector2(942.85754, 85.714294)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qy8e7"]
size = Vector2(117.14285, 65.714325)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1go7n"]
size = Vector2(47.14286, 161.42857)

[sub_resource type="CircleShape2D" id="CircleShape2D_fku84"]
radius = 42.107006

[sub_resource type="CircleShape2D" id="CircleShape2D_50hxu"]
radius = 41.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i7qyh"]
radius = 30.016663

[node name="LivingRoomScene" type="Node2D"]
script = ExtResource("1_s3tay")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="LivingRoom" type="Node2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="Fondo" type="Sprite2D" parent="LivingRoom"]
position = Vector2(2.8571427, 14.285713)
texture = ExtResource("2_iy0a6")

[node name="StaticBody2D" type="StaticBody2D" parent="LivingRoom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-2.8571384, -438.5712)
scale = Vector2(0.9999995, 0.9999995)
shape = SubResource("RectangleShape2D_7sa1j")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-208.5714, 219.99997)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_qy8e7")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(1.4285583, 267.14288)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_qy8e7")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(222.85716, 220)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_qy8e7")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-131.4286, 400)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_qy8e7")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-300, 421.42856)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_qy8e7")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(318.57147, 415.71423)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_qy8e7")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(117.14287, 401.42856)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_qy8e7")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-420.00003, -290)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-420.00003, -114.28572)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(444.28568, -295.71426)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(441.42853, -124.28569)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(444.28568, 170.00005)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-387.14288, 192.85718)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(-391.4286, 368.57144)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="LivingRoom/StaticBody2D"]
position = Vector2(397.14288, 265.7143)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_1go7n")

[node name="PersonTDScene" parent="." instance=ExtResource("3_b2dfi")]
scale = Vector2(1, 1)

[node name="DoorLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorLeft"]
position = Vector2(-300, 29)
shape = SubResource("CircleShape2D_fku84")
debug_color = Color(0.79296947, 0.31635195, 0.7296467, 0.41960785)

[node name="DoorRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorRight"]
position = Vector2(308, 15)
shape = SubResource("CircleShape2D_50hxu")
debug_color = Color(0.7921569, 0.31764707, 0.7294118, 0.41960785)

[node name="BtnWallet" type="Button" parent="."]
offset_left = 129.0
offset_top = 206.0
offset_right = 158.0
offset_bottom = 228.0
theme_override_styles/hover = ExtResource("4_i7qyh")

[node name="Cartera" parent="BtnWallet" instance=ExtResource("4_bpb7m")]
position = Vector2(15, 9)
scale = Vector2(0.08, 0.08)

[node name="ShapeCartera" type="Area2D" parent="."]
position = Vector2(142, 215)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShapeCartera"]
position = Vector2(-18, 5)
shape = SubResource("CircleShape2D_i7qyh")
debug_color = Color(0.91470575, 0.78333795, 0, 0.41960785)

[connection signal="pressed" from="BtnWallet" to="." method="_on_button_pressed"]
